--- a/index.html
+++ b/index.html
@@ -252,6 +252,37 @@
                     </div>
             </section>
         </main>
+
+        <section class="inquiry-section glass-panel" style="margin-top: 2rem;">
+            <h2>제휴 및 이용 문의</h2>
+            <form action="https://formspree.io/f/xzdvnwry" method="POST" class="inquiry-form">
+                <div class="form-grid">
+                    <div class="input-group">
+                        <label for="full-name">성함 / 업체명</label>
+                        <div class="input-wrapper">
+                            <input type="text" name="name" id="full-name" placeholder="홍길동" required>
+                        </div>
+                    </div>
+                    <div class="input-group">
+                        <label for="email-address">이메일 주소</label>
+                        <div class="input-wrapper">
+                            <input type="email" name="_replyto" id="email-address" placeholder="example@email.com"
+                                required>
+                        </div>
+                    </div>
+                </div>
+                <div class="input-group">
+                    <label for="message">문의 내용</label>
+                    <div class="input-wrapper" style="height: auto; padding: 0.8rem 1rem;">
+                        <textarea name="message" id="message" rows="4" placeholder="문의하실 내용을 입력해주세요." required
+                            style="width: 100%; background: transparent; border: none; color: var(--text-color); font-family: inherit; font-size: 1rem; outline: none; resize: vertical;"></textarea>
+                    </div>
+                </div>
+                <!-- Prevent spam with honeypot -->
+                <input type="text" name="_gotcha" style="display:none">
+                <button type="submit" class="btn-submit">문의하기</button>
+            </form>
+        </section>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
