docs: optimize for AdSense approval (SEO, detailed guide, and footer)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>프리미엄 주택 담보 대출 계산기</title>
+    <meta name="description"
+        content="DSR 규제를 완벽 반영한 프리미엄 주택 담보 대출 계산기입니다. 최대 대출 가능 금액, LTV, DSR, 월 납입금을 한눈에 확인하고 내 집 마련 계획을 설계하세요.">
+    <meta name="keywords" content="주택담보대출 계산기, DSR 계산기, LTV 계산기, 대출 한도 계산, 내집마련, 대출 이자 계산">
+    <meta property="og:title" content="프리미엄 주택 담보 대출 및 DSR 계산기">
+    <meta property="og:description" content="정확한 DSR 계산과 주택 담보 대출 설계를 위한 필수 도구.">
+    <meta property="og:type" content="website">
+
+    <title>프리미엄 주택 담보 대출 계산기 - DSR 완벽 반영</title>
     <!-- Google AdSense -->
     <meta name="google-adsense-account" content="ca-pub-6507442651930731">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6507442651930731"
@@ -288,6 +295,45 @@
                 <button type="submit" class="btn-submit">문의하기</button>
             </form>
         </section>
+
+        <!-- AdSense Guide Section for High Quality Content -->
+        <section class="guide-section glass-panel" style="margin-top: 2rem;">
+            <h2>주택 담보 대출 및 DSR 계산 가이드</h2>
+            <div class="guide-content">
+                <article>
+                    <h3>1. DSR(총부채원리금상환비율)이란?</h3>
+                    <p>DSR은 모든 가계대출의 원리금 상환액을 연소득으로 나눈 비율입니다. 주택담보대출뿐만 아니라 신용대출, 자동차 할부, 카드론 등 모든 부채의 원리금을 포함하여 대출 한도를
+                        결정하는 가장 강력한 규제입니다.</p>
+                </article>
+                <article>
+                    <h3>2. LTV(담보인정비율)와 대출 한도</h3>
+                    <p>LTV는 주택 가격 대비 대출 가능 금액의 비율을 의미합니다. 지역이나 주택 유형, 무주택 여부에 따라 LTV 기준이 다르며, DSR 한도와 함께 고려하여 최종 대출 한도가
+                        결정됩니다.</p>
+                </article>
+                <article>
+                    <h3>3. 상환 방식의 차이점</h3>
+                    <ul>
+                        <li><strong>원리금균등분할상환:</strong> 매달 갚는 원금과 이자의 합계가 동일합니다. 계획적인 자금 관리가 용이합니다.</li>
+                        <li><strong>원금균등분할상환:</strong> 매달 갚는 원금이 일정하며, 이자는 남은 원금에 따라 점차 줄어듭니다. 총 이자 비용이 가장 적습니다.</li>
+                        <li><strong>체증식 분할상환:</strong> 초기에 적게 내고 시간이 지날수록 늘어나는 방식입니다. 사회 초년생에게 유리할 수 있습니다.</li>
+                    </ul>
+                </article>
+                <article>
+                    <h3>4. 똑똑한 대출 설계를 위한 팁</h3>
+                    <p>기존 부채가 있다면 원금을 일부 상환하여 DSR 비율을 낮추는 것이 주택담보대출 한도를 늘리는 데 도움이 됩니다. 또한, 변동 금리보다 고정 금리가 DSR 계산 시 유리한
+                        '스트레스 DSR' 적용 여부를 확인하세요.</p>
+                </article>
+            </div>
+        </section>
+
+        <footer class="main-footer">
+            <div class="footer-links">
+                <a href="#">개인정보처리방침</a>
+                <a href="#">이용약관</a>
+                <a href="#">제휴문의</a>
+            </div>
+            <p>&copy; 2026 주택 담보 대출 계산기. All rights reserved.</p>
+        </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
