--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             </section>
         </main>
 
-        <section class="inquiry-section glass-panel" style="margin-top: 2rem;">
+        <section id="inquiry" class="inquiry-section glass-panel" style="margin-top: 2rem;">
             <h2>제휴 및 이용 문의</h2>
             <form action="https://formspree.io/f/xzdvnwry" method="POST" class="inquiry-form">
                 <div class="form-grid">
@@ -323,14 +323,21 @@
                     <p>기존 부채가 있다면 원금을 일부 상환하여 DSR 비율을 낮추는 것이 주택담보대출 한도를 늘리는 데 도움이 됩니다. 또한, 변동 금리보다 고정 금리가 DSR 계산 시 유리한
                         '스트레스 DSR' 적용 여부를 확인하세요.</p>
                 </article>
+                <article class="disclaimer-article">
+                    <h3>5. 서비스 이용 시 주의사항</h3>
+                    <p>본 계산기의 결과는 입력된 정보를 바탕으로 한 시뮬레이션이며, 실제 대출 금리 및 한도와 100% 정확히 일치하지 않을 수 있습니다. 정확한 정보를 입력할수록 계산 정확도는
+                        올라가며, 실제 대출 신청 시 금융기관의 심사 결과에 따라 달라질 수 있습니다.</p>
+                    <p style="margin-top: 0.5rem;">혹시 계산기 로직이나 정보 중 잘못된 부분을 발견하신다면 상단의 <strong>제휴 및 이용 문의</strong>를 통해
+                        알려주시면 적극 반영하도록 하겠습니다.</p>
+                </article>
             </div>
         </section>
 
         <footer class="main-footer">
             <div class="footer-links">
-                <a href="#">개인정보처리방침</a>
-                <a href="#">이용약관</a>
-                <a href="#">제휴문의</a>
+                <a href="privacy.html" target="_blank">개인정보처리방침</a>
+                <a href="terms.html" target="_blank">이용약관</a>
+                <a href="#inquiry">제휴문의</a>
             </div>
             <p>&copy; 2026 주택 담보 대출 계산기. All rights reserved.</p>
         </footer>
